add content in profile

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
-  # awards:
-  # summary:
+- degree: professional chocolate eater  
+  uni: University of Phoenix Online of course
+  year: June, 2019 &mdash; January, 2020
+  # awards: most happy hour pho consumed in one year
+  # summary: here trying to learn the fancy git stuff like cherrypicking
